--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - ./log:/var/log
     environment:
       - NET_INTERFACE=eth0
-      - WEB_ADDr=:8080
+      - WEB_ADDR=:8080
     container_name: monitor-client
     network_mode: host
  
