--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     environment:
       - NET_INTERFACE=eth0
       - WEB_ADDR=:8080
+      - GRPC_ADDR=:8090
     container_name: monitor-client
     network_mode: host
  
